ACLOCAL_AMFLAGS = ${ACLOCAL_FLAGS}

bin_PROGRAMS = sim6809

sim6809_LDADD = $(UTIL_LIBS)
sim6809_SOURCES = console.c dis6809.c emu6809.c inst6809.c int6809.c memory.c misc.c miscutils.c intel.c motorola.c raw.c ../hardware/hardware.c ../hardware/mc6850.c ../hardware/mc6840.c ../hardware/mc6820.c ../hardware/r6522.c ../hardware/r6532.c ../hardware/fd1795.c ../hardware/fake.c
